--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -5,8 +5,8 @@
   <title>Project Manager</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="assets/images/logoPM.png?v=1">
-  <link rel="shortcut icon" type="image/png" href="assets/images/logoPM.png?v=1">
+  <link rel="icon" type="image/png" href="assets/images/favicon.png?v=1">
+  <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png?v=1">
 </head>
 <body>
   <app-root></app-root>
